--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<description>Singleton de estado</description>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.source>1.8</java.source>
+		<java.target>1.8</java.target>
 	</properties>
-
 </project>
